Add BigInteger algorithms - Pollard-rho factorization - Miller-Rabin primality test - Legendre and Jacobi symbols - Euler and Mobius functions - Discrete logarithm - Discrete square root

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(BigIntegerLab)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(BigIntegerLab main.cpp BigInteger.h BigInteger.cpp Interface.cpp Interface.h)
+add_executable(BigIntegerLab main.cpp BigInteger.h BigInteger.cpp Interface.cpp Interface.h BigIntegerAlgorithm.h BigIntegerAlgorithm.cpp)
