--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(BigIntegerLab)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(BigIntegerLab main.cpp BigInteger.h BigInteger.cpp Interface.cpp Interface.h BigIntegerAlgorithm.h BigIntegerAlgorithm.cpp)
+add_executable(BigIntegerLab main.cpp BigInteger.h BigInteger.cpp
+               Interface.cpp Interface.h BigIntegerAlgorithm.h BigIntegerAlgorithm.cpp)
