Added library target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(BigIntegerLab main.cpp BigInteger.h BigInteger.cpp
                Interface.cpp Interface.h BigIntegerAlgorithm.h BigIntegerAlgorithm.cpp)
+add_library(BigInteger BigInteger.h BigInteger.cpp BigIntegerAlgorithm.h BigIntegerAlgorithm.cpp)
